<resources>
    <string name="app_name">AAT Mobile App</string>
    <string name="app_title" translatable="false">AAT\nMobile App</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user">User</string>
    <string name="gestureMode">Gesture mode</string>
    <string name="colored_borders">Colored borders</string>
    <string name="rotation">Rotation</string>
    <string name="overall">Overall</string>
    <string name="round">Round</string>
    <string name="image">Image</string>
    <string name="time1">Time 1</string>
    <string name="time2">Time 2</string>
    <string name="reaction">Reaction</string>
    <string name="default_image_set">Default image set</string>
    <string name="date">Date</string>
    <string name="pref_selectGestureMode">Select gesture mode</string>
    <string name="pref_sessionSettings">Edit session settings</string>
    <string name="pref_manageImageSets">Manage image sets</string>
    <string name="pref_manageImageSets_summary">Add, modify or remove custom image sets</string>
    <string name="pref_coloredBordersCategory">Colored borders</string>
    <string name="pref_coloredBorders">Enable colored borders</string>
    <string name="pref_colorBorderPush">Select color for push images</string>
    <string name="pref_colorBorderPull">Select color for pull images</string>
    <string name="pref_rotationCategory">Rotation</string>
    <string name="pref_rotation">Enable image rotation</string>
    <string name="pref_rotationPush">Rotation for push images</string>
    <string name="pref_rotationPull">Rotation for pull images</string>
    <string name="pref_miscCategory">Miscellaneous</string>
    <string name="pref_imagesPerRound">Images per round</string>
    <string name="pref_screenOrientation">Screen orientation</string>
    <string name="pref_ratioPushPull1">Ratio Pull / Push (Round 1)</string>
    <string name="pref_ratioPushPull2">Ratio Pull / Push (Round 2)</string>
    <string name="pref_ratioPushPull3">Ratio Pull / Push (Round 3)</string>
    <string name="pref_ratioPushPull4">Ratio Pull / Push (Round 4)</string>
    <string name="pref_ratioPushPull5">Ratio Pull / Push (Round 5)</string>
    <string name="pref_amountOfRounds">Amount of rounds</string>
    <string name="pref_timeBetweenImages">Time between images</string>
    <string name="pref_messageAfterEachImage">Message after each image</string>
    <string name="pref_showInstructions">Show Instructions</string>
    <string name="pref_editInstructions">Edit instructions</string>
    <string name="pref_export">Export Session settings</string>
    <string name="pref_import">Import Session settings</string>
    <string name="gestureMode_move">Move device towards you / away from you</string>
    <string name="gestureMode_pinch">Pinch open / pinch close</string>
    <string name="gestureMode_angle">Angle device towards you / away from you</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_orange">Orange</string>
    <string name="color_purple">Purple</string>
    <string name="color_pink">Pink</string>
    <string name="color_turquoise">Turquoise</string>
    <string name="gestureMode_move_val" translatable="false">move</string>
    <string name="gestureMode_pinch_val" translatable="false">pinch</string>
    <string name="gestureMode_angle_val" translatable="false">angle</string>
    <string name="pref_messageAfterEachImageValueNone">None</string>
    <string name="pref_messageAfterEachImageValueToast" translatable="false">Toast</string>
    <string name="pref_messageAfterEachImageValueDialog" translatable="false">Dialog</string>
    <string name="prefImagesPerRound_default" translatable="false">10</string>
    <string name="pref_timeBetweenImagesDefault">1.0</string>
    <string name="ratioPushPull_default" translatable="false">50</string>
    <string name="settings_activity_title">Settings</string>
    <string name="about_activity_title">About</string>
    <string name="sessionList_activity_title">Sessions</string>
    <string name="sessionSettings_activity_title">Session settings</string>
    <string name="sessionRunning_activity_title" translatable="false">AAT Session</string>
    <string name="imageSets_activity_title">Manage Image sets</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_load_config">Import Settings</string>
    <string name="start_button">Start</string>
    <string name="results_button">Results</string>
    <string name="buttonOk">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="device">Device</string>
    <string name="internet">Internet</string>
    <string name="imageView_contentDescription">Selected image</string>
    <string name="university_siegen_logo">University Siegen Logo</string>
    <string name="logo_lehrstuhl">Logo Lehrstuhl</string>
    <string name="noImageSetSelected">No image set selected!</string>
    <string name="noImagesInImageSet">There are not enough images in the selected image set!</string>
    <string name="couldNotImportImage">Could not import image</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_do_you_really_want_to_leave">Do you really want to leave the session?</string>
    <string name="nameTooLong">Name is too long</string>
    <string name="message_correct">Correct!</string>
    <string name="message_wrong">Wrong!</string>
    <string name="error_user_exists_already">User exists, already</string>
    <string name="error_could_not_load_data">Could not load settings file</string>
    <string name="loading_successfull">Successfully loaded settings!</string>
    <string name="load_local_or_remote">Load file from device or internet?</string>
    <string name="enter_url_for_download">Enter URL for download</string>
    <string name="err_delete_image_set">Could not delete image set. Delete all Session results that are referencing this image set, first.</string>
    <string name="createNewImageSet">Create new image set</string>
    <string name="newNameHint">Enter a name …</string>
    <string name="imageForPushOrPull">Image for push or pull?</string>
    <string name="push">Push</string>
    <string name="pull">Pull</string>
    <string name="selectNewImage">Select a new image for the image set</string>
    <string name="delete">Delete</string>
    <string name="active">Active</string>
    <string name="default_set">Default Set</string>
    <string name="menu_action_rename">Rename</string>
    <string name="renameImageSet">Rename image set</string>
    <string name="menu_action_copy">Copy</string>
    <string name="menu_action_changeImagePushPull">Change</string>
    <string name="prompt_user_name">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user_name">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register">Register new user</string>
    <string name="action_logout">Log out</string>
    <string name="user_logged_in_prefix">"Logged in: "</string>
    <string name="edit_instruction_activity_title">Edit instructions</string>
    <string name="put_instructions_here">Put instructions here…</string>
    <string name="third_party_software">Third party software:</string>
    <string name="third_party_software_title">Third party software</string>
    <string name="ext_lib_glide" translatable="false">- Glide image management library</string>
    <string name="ext_lib_touch_image_view" translatable="false">- TouchImageView</string>
    <string name="ext_lib_fast_csv" translatable="false">- FastCSV</string>
    <string name="app_info_text" translatable="false">Diese App wurde zwischen Oktober 2018 und Februar 2019 im Rahmen der Bachelorarbeit \"Entwicklung einer mobilen Applikation für die Therapie von Substanz-Abhängigkeitserkrankungen unter Verwendung des Approach-Avoidance-Tasks (AAT)\" am Lehrstuhl <i>Medizinische Informatik und Mikrosystementwurf</i> der <i>Universität Siegen</i> entwickelt.
        Sie ist Teil des Forschungsprojektes <a href="http://www.uni-siegen.de/fokos/forschungsprojekte/antares/">ANTARES</a>.
        \n\nUrheber dieser App und der zuvor genannten Bachelorarbeit ist <b>Tobias Forneberg</b>.

        \n\nDiese App ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Namensnennung-Nicht kommerziell 4.0 International Lizenz</a>.
    </string>
</resources>