<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="screen_orientation"
            android:title="@string/pref_screenOrientation"
            android:summary="%s"
            android:defaultValue="Portrait"
            android:persistent="true"
            android:entries="@array/screenOrientationValues"
            android:entryValues="@array/screenOrientationValues"
            />
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="colored_borders"
            android:title="@string/pref_coloredBorders"
            android:summary=""
            android:defaultValue="true" />
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="colored_borders_color_push"
            android:title="@string/pref_colorBorderPush"
            android:summary="%s"
            android:defaultValue="#d50000"
            android:persistent="true"
            android:entries="@array/coloredBorders"
            android:entryValues="@array/coloredBordersValues"
            android:dependency="colored_borders"
            />
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="colored_borders_color_pull"
            android:title="@string/pref_colorBorderPull"
            android:summary="%s"
            android:defaultValue="#33691e"
            android:persistent="true"
            android:entries="@array/coloredBorders"
            android:entryValues="@array/coloredBordersValues"
            android:dependency="colored_borders"
            />
    </PreferenceCategory>
    <PreferenceCategory>
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="rotation"
            android:title="@string/pref_rotation"
            android:summary=""
            android:defaultValue="false" />
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="rotation_push"
            android:title="@string/pref_rotationPush"
            android:summary="%s"
            android:defaultValue="-25°"
            android:persistent="true"
            android:entries="@array/rotationAngle"
            android:entryValues="@array/rotationAngle"
            android:dependency="rotation"
            />
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="rotation_pull"
            android:title="@string/pref_rotationPull"
            android:summary="%s"
            android:defaultValue="+25°"
            android:persistent="true"
            android:entries="@array/rotationAngle"
            android:entryValues="@array/rotationAngle"
            android:dependency="rotation"
            />
    </PreferenceCategory>
    <PreferenceCategory>
        <ListPreference
            app:iconSpaceReserved="false"
            android:id="@+id/imagesPerRound"
            android:key="imagesPerRound"
            android:title="@string/pref_imagesPerRound"
            android:entries="@array/imagesPerRoundValues"
            android:entryValues="@array/imagesPerRoundValues"
            android:defaultValue="@string/prefImagesPerRound_default"
            android:persistent="true"
            android:summary="%s"
            />
        <ListPreference
            app:iconSpaceReserved="false"
            android:id="@+id/timeBetweenImages"
            android:key="timeBetweenImages"
            android:title="@string/pref_timeBetweenImages"
            android:entries="@array/timeBetweenImagesEntries"
            android:entryValues="@array/timeBetweenImagesValues"
            android:defaultValue="@string/pref_timeBetweenImagesDefault"
            android:persistent="true"
            android:summary="%s"
            />
        <ListPreference
            app:iconSpaceReserved="false"
            android:id="@+id/messageAfterEachImage"
            android:key="messageAfterEachImage"
            android:title="@string/pref_messageAfterEachImage"
            android:entries="@array/messageAfterEachImageValues"
            android:entryValues="@array/messageAfterEachImageValues"
            android:defaultValue="@string/pref_messageAfterEachImageValueNone"
            android:persistent="true"
            android:summary="%s"
            />
    </PreferenceCategory>
    <PreferenceCategory>
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="show_instructions"
            android:title="@string/pref_showInstructions"
            android:summary=""
            android:defaultValue="true" />
        <Preference
            app:iconSpaceReserved="false"
            android:dependency="show_instructions"
            android:title="@string/pref_editInstructions" >
            <intent android:action="android.intent.action.VIEW"
                android:targetPackage="de.tforneberg.aatapp"
                android:targetClass="de.tforneberg.aatapp.ui.activities.EditInstructionActivity" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory>
        <ListPreference
            app:iconSpaceReserved="false"
            android:id="@+id/amountOfRounds"
            android:key="amountOfRounds"
            android:title="@string/pref_amountOfRounds"
            android:entries="@array/amountOfRoundsValues"
            android:entryValues="@array/amountOfRoundsValues"
            android:defaultValue="1"
            android:persistent="true"
            android:summary="%s"
            />
        <ListPreference
            app:iconSpaceReserved="false"
            android:id="@+id/ratioPushPullRound1"
            android:key="ratio_push_pull_round1"
            android:title="@string/pref_ratioPushPull1"
            android:entries="@array/ratioPushPullEntries"
            android:entryValues="@array/ratioPushPullValues"
            android:defaultValue="@string/ratioPushPull_default"
            android:persistent="true"
            android:summary="%s"
            />
        <ListPreference
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            android:id="@+id/ratioPushPullRound2"
            android:key="ratio_push_pull_round2"
            android:title="@string/pref_ratioPushPull2"
            android:entries="@array/ratioPushPullEntries"
            android:entryValues="@array/ratioPushPullValues"
            android:defaultValue="@string/ratioPushPull_default"
            android:persistent="true"
            android:summary="%s"
            />
        <ListPreference
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            android:id="@+id/ratioPushPullRound3"
            android:key="ratio_push_pull_round3"
            android:title="@string/pref_ratioPushPull3"
            android:entries="@array/ratioPushPullEntries"
            android:entryValues="@array/ratioPushPullValues"
            android:defaultValue="@string/ratioPushPull_default"
            android:persistent="true"
            android:summary="%s"
            />
        <ListPreference
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            android:id="@+id/ratioPushPullRound4"
            android:key="ratio_push_pull_round4"
            android:title="@string/pref_ratioPushPull4"
            android:entries="@array/ratioPushPullEntries"
            android:entryValues="@array/ratioPushPullValues"
            android:defaultValue="@string/ratioPushPull_default"
            android:persistent="true"
            android:summary="%s"
            />
        <ListPreference
            app:iconSpaceReserved="false"
            app:isPreferenceVisible="false"
            android:id="@+id/ratioPushPullRound5"
            android:key="ratio_push_pull_round5"
            android:title="@string/pref_ratioPushPull5"
            android:entries="@array/ratioPushPullEntries"
            android:entryValues="@array/ratioPushPullValues"
            android:defaultValue="@string/ratioPushPull_default"
            android:persistent="true"
            android:summary="%s"
            />
    </PreferenceCategory>
</PreferenceScreen>