<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="ifRoom"/>
    <!-- About, should always be in the overflow -->
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_load_config"
        android:title="@string/action_load_config"
        app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
</menu>